// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb renders markup with two items 1`] = `
<ng-component
  testedWidget={[Function NgAisBreadcrumb]}
>
  <ais-instantsearch>
    <ais-breadcrumb>
      
      <div
        class="ais-Breadcrumb"
      >
        <ul
          class="ais-Breadcrumb-list"
        >
          
          <li
            class="ais-Breadcrumb-item"
            ng-reflect-ng-class="ais-Breadcrumb-item,"
          >
            
            
            <a
              class="ais-Breadcrumb-link"
              href=""
            >
               foo 
            </a>
            
          </li>
          <li
            class="ais-Breadcrumb-item ais-Breadcrumb-item--selected"
            ng-reflect-ng-class="ais-Breadcrumb-item,ais-Breadc"
          >
            
            <span
              aria-hidden="true"
              class="ais-Breadcrumb-separator"
            >
               &gt; 
            </span>
            
            
            <span>
               bar 
            </span>
          </li>
        </ul>
      </div>
    </ais-breadcrumb>
  </ais-instantsearch>
</ng-component>
`;

exports[`Breadcrumb renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisBreadcrumb]}
>
  <ais-instantsearch>
    <ais-breadcrumb>
      
      <div
        class="ais-Breadcrumb"
      >
        <ul
          class="ais-Breadcrumb-list"
        >
          
        </ul>
      </div>
    </ais-breadcrumb>
  </ais-instantsearch>
</ng-component>
`;

exports[`Breadcrumb should be hidden with \`autoHideContainer\` 1`] = `
<ng-component
  testedWidget={[Function NgAisBreadcrumb]}
>
  <ais-instantsearch>
    <ais-breadcrumb>
      
    </ais-breadcrumb>
  </ais-instantsearch>
</ng-component>
`;
